% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/DPQ/inst/NEWS.Rd"))
\name{NEWS}
\title{DPQ News}
\encoding{UTF-8}

\section{Version 0.5-7 (2023-10-20, svn r275)}{
  \subsection{Misc}{
    \itemize{
      \item fix "lost braces"
      \item replace UTF-8 greek glyps by plotmath
    }
  }
}

\section{Version 0.5-6 (2023-09-06, svn r272)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{phyperR()} gets \code{lower.tail=TRUE, log.p=FALSE} arguments.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Correctly vectorize \code{phyperR()}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Documentation (and internal comment) updates for
      \code{qbinomR()} and \code{qnbinomR()}, notably fixing "empty"
      argument doc.

      \item Deprecated \code{phyperBinMolenaar()}; it has been
      synonym to \code{phyperBinMolenaar.1()}.

      \item Fix \LaTeX warnings/errors by removing amazingly many
      \verb{\cr} in \file{man/*.Rd} files.
    }
  }
}

\section{Version 0.5-5 (2023-06-23, svn r264)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{qbinomR(p, *)}, \code{qnbinomR(p, *)}, and \code{qpoisR(p, *)}:
      Fix \code{R_Q_P01_boundaries(p, ..)} for trivial boundaries, e.g.,
      \eqn{p \in \{0,1\}} for \code{log.p=FALSE}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item A new \command{flang} Fortran compiler does not know outdated
      \code{derfc()}, but needs current standard \code{erfc()}.
    }
  }
}

\section{Version 0.5-4 (2023-04-12, svn r261)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New \R function \code{qnormCappr()}.
      \item New \R function \code{rexpm1()} from TOMS 708.
      \item Provide also \code{qnormR(*, version = "1.0.x")} and \code{"1.0_noN"},
      for history's sake.
      \item New \R function \code{rlog1()} from TOMS 708.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{